<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">PBMap</string>
    <string name="action_back">Previous map</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Hint: PB WB, 116@wi,…</string>
    <string name="not_found">Place not found</string>
    <string name="about">About</string>
    <string name="action_share">Share</string>
    <string name="rate">Rate</string>
    <string name="about_description">PBMap is an interactive map of Bialystok University of Technology designed in order to facilitate navigation and locating objects on polytechnic.</string>
    <string name="about_author">Author:\u0020</string>
    <string name="about_version">Version: %1$s</string>
    <string name="could_not_open_android_market">Could not open Android market, please install the market application (Google Play).</string>
    <string name="about_report">Report bug</string>
    <string name="about_licenses">Licenses</string>
    <string name="about_attributions">Attributions</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="gps_disabled_message">%1$s needs access to your location to display marker on your current position. Please turn on Location Services.</string>
    <string name="gps_permissions_disabled_message">%1$s needs Location permissions to use Location Service. The app wants to display marker on your current position. Please allow %1$s to access Location.</string>
    <string name="location_permissions">Location permissions</string>
    <string name="ok" translatable="false">OK</string>
    <string name="waiting_for_location">Waiting for location…</string>
    <string name="logo">Logo</string>
    <string name="help">Help</string>
    <string name="maps">Maps</string>
    <string name="airplane_enabled">Please disable the airplane mode</string>
    <string name="wifi_disabled">Please enable WIFI or use GPS location for more accurate tracking</string>
    <string name="place_destination_marker">Place Destination marker</string>
    <string name="place_source_marker">Place source marker</string>
    <string name="map">Map</string>
    <string name="deanery_121_name">Deanery 121</string>
    <string name="deanery_name">Deanery</string>
    <string name="secretariat_name">Secretariat</string>
    <string name="pb_campus_name">PB campus</string>
    <string name="pb_wz_campus_name">PB WZ campus</string>
    <string name="rector_name">Rector\'s office</string>
    <string name="lodge_name">Lodge</string>
    <string name="courts_name">Tennis\ncourts</string>
    <string name="ds_alpha_name">DS\nAlpha</string>
    <string name="ds_beta_name">DS\nBeta</string>
    <string name="ds_gamma_name">DS\nGamma</string>
    <string name="ds_delta_name">DS\nDelta</string>
    <string name="gwint_name">Gwint\nclub</string>
    <string name="assistant_hotel_name">Assist.\nhotel</string>
    <string name="store_name">Store</string>
    <string name="action_search_description">Use search to find a place e.g. room or building.\n\nLimit search scope by using place@map syntax e.g. 116@wi.\n\nSpaces are preserved when searching.</string>
    <string name="menu">Menu</string>
    <string name="menu_description">You can switch between maps using menu.\n\nYou can also find additional information about the app at the bottom.</string>
    <string name="floor">Floor</string>
    <string name="floor_description">When this button appears it will mean that the opened map contains additional floors</string>
    <string name="more_features">More features</string>
    <string name="more_features_description">You can enable gps for easier navigation on the map (might be inaccurate indoors).\n\nSometimes there can be additional info about currently viewed place.</string>
    <string name="action_back_description">After going deep into the map a back button will appear which will allow you to go back a map</string>
    <string name="maps_description">By interacting with map you can navigate to different places.\nUse long press to put a source/destination markers after which a shortest route between those locations will be drawn.</string>
    <string name="atm_name">ATM</string>
    <string name="buffet_name">Buffet</string>
    <string name="car_hall_name">Laboratory of motor vehicles\nVehicles hall</string>
    <string name="assembly_hall_a_name">Assembly\nhall A</string>
    <string name="assembly_hall_b_name">Assembly\nhall B</string>
    <string name="assembly_hall_c_name">Assembly\nhall C</string>
    <string name="p1_21_name">P1/21\nSmall reading room</string>
    <string name="p1_38_name">P1/38\nBig reading room</string>
    <string name="p0_19_name">P0/19\nInterlibrary rental</string>
    <string name="p0_15_16_name">P0/15,16\nNorms and\nspecial collections\nreading room</string>
    <string name="cloak_room_name">Cloakroom</string>
    <string name="information_publishers_reading_room_name">Information publishers\nreading room</string>
    <string name="magazines_reading_room_name">Magazines\nreading room</string>
    <string name="electronic_reading_room_name">Electronic\nreading room</string>
    <string name="book_rental_name">Book rental</string>
    <string name="book_return_name">Self-service\nbook return</string>
    <string name="main_library_name">PB Main\nLibrary</string>
    <string name="sjo_name">SJO</string>
    <string name="ckz_name">CKZ</string>
    <string name="assembly_hall_i_name">Assembly\nhall I</string>
    <string name="assembly_hall_ii_name">Assembly\nhall II</string>
    <string name="assembly_hall_iii_name">Assembly\nhall III</string>
    <string name="gym_name">Gym</string>
    <string name="martial_arts_hall_name">Martial\narts hall</string>
    <string name="table_tennis_hall_name">Table\ntennis hall</string>
    <string name="aerobics_hall_name">Aerobics\nhall</string>
    <string name="sports_hall_name">Sports hall\nTeam games hall</string>
    <string name="pb_wz_montreal_name" translatable="false">PB WZ Montreal</string>
    <string name="pb_wz_berlin_name" translatable="false">PB WZ Berlin</string>
    <string name="pb_wz_berlin_l2_name" translatable="false">PB WZ Berlin L2</string>
    <string name="pb_wz_shanghai_name">PB WZ Shanghai</string>
    <string name="pb_wz_shanghai_l2_name">PB WZ Shanghai L2</string>
    <string name="pb_wz_philadelphia_name">PB WZ Philadelphia</string>
    <string name="pb_wz_philadelphia_l2_name">PB WZ Philadelphia L2</string>
    <string name="pb_wz_philadelphia_l3_name">PB WZ Philadelphia L3</string>
    <string name="berlin_name" translatable="false">\n\n\n\n\n\nBerlin</string>
    <string name="shanghai_name">Shanghai\n\n</string>
    <string name="philadelphia_name">Philadelphia</string>
    <string name="pb_we_name" translatable="false">PB WE\n</string>
    <string name="pb_wb_name" translatable="false">"\n\nPB WB             "</string>
    <string name="distance">Distance: %1$d m</string>
    <string name="unfinished">This map has not been finished yet. Use long press if you want to improve the data.</string>
    <string name="improve">Report new/wrong place</string>
    <string name="improve_message">What should[not] be placed at the pressed location?</string>
    <string name="report">Report</string>
    <string name="required">This field is required</string>
</resources>
