<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.MapActivity">
    <group
        android:id="@+id/maps_group"
        android:orderInCategory="1"
        android:title="@string/maps" />
    <item
        android:orderInCategory="2"
        android:title="@string/help">
        <menu>
            <group>
                <item
                    android:id="@+id/menu_help"
                    android:icon="@drawable/ic_help"
                    android:title="@string/help" />
                <item
                    android:id="@+id/menu_about"
                    android:icon="@drawable/ic_info"
                    android:title="@string/about" />
            </group>
        </menu>
    </item>
</menu>