<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/popup_destination_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/place_destination_marker"
            android:textColor="@color/colorSecondaryText" />

        <Button
            android:id="@+id/popup_source_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/place_source_marker"
            android:textColor="@color/colorSecondaryText" />

        <Button
            android:id="@+id/popup_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/cancel"
            android:textColor="@color/colorSecondaryText" />
    </TableLayout>
</RelativeLayout>